--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
  
-    <title>Zentro Malata</title>
+    <title>Zentro Restaurant</title>
     <base href="/" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
